// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home screen should render correctly when refreshing: home screen refreshing 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  style={
    Object {
      "backgroundColor": undefined,
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderBottomColor": "transparent",
          "borderBottomWidth": 1,
          "borderTopColor": "transparent",
          "borderTopWidth": 1,
          "padding": 8,
          "paddingHorizontal": 15,
          "paddingVertical": 20,
        }
      }
      testID="RNE__SearchBar-wrapper"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 0,
            "width": "100%",
          }
        }
        testID="RNE__Input__view-wrapper"
      >
        <View
          collapsable={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": undefined,
              "borderBottomWidth": 0,
              "borderColor": "#86939e",
              "borderRadius": 3,
              "flexDirection": "row",
              "minHeight": 30,
              "overflow": "hidden",
              "transform": Array [
                Object {
                  "translateX": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "marginLeft": 8,
                "marginVertical": 4,
                "paddingRight": 4,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
              testID="RNE__ICON__CONTAINER"
            >
              <View
                accessibilityRole="button"
                android_ripple={
                  Object {
                    "borderless": false,
                    "color": "rgba(0, 0, 0, 0.3)",
                    "radius": -5,
                  }
                }
                disabled={false}
                testID="RNE__ICON__CONTAINER_ACTION"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                  testID="RNE__ICON"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#86939e",
                          "fontSize": 18,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="RNE__ICON__Component"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <TextInput
            autoCorrect={false}
            editable={true}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Search books"
            placeholderTextColor="#86939e"
            platform="default"
            style={
              Object {
                "backgroundColor": undefined,
                "color": "#86939e",
                "flex": 1,
                "fontSize": 18,
                "marginLeft": 10,
                "minHeight": 40,
              }
            }
            testID="RNE__SearchBar"
            underlineColorAndroid="transparent"
            value=""
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "marginRight": 8,
                "marginVertical": 4,
                "paddingRight": 4,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            />
          </View>
        </View>
        <Text
          style={
            Object {
              "color": "#ff190c",
              "fontSize": 12,
              "height": 0,
              "margin": 0,
              "padding": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 20,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 2,
            },
            undefined,
            false,
          ]
        }
        testID="RNE_BUTTON_WRAPPER"
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#00DAC4",
                "borderRadius": 2,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "paddingHorizontal": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
              testID="RNE__ICON__CONTAINER"
            >
              <View
                accessibilityRole="button"
                android_ripple={
                  Object {
                    "borderless": false,
                    "color": "rgba(0, 0, 0, 0.3)",
                    "radius": -5,
                  }
                }
                disabled={false}
                replaceTheme={[Function]}
                testID="RNE__ICON__CONTAINER_ACTION"
                updateTheme={[Function]}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                  testID="RNE__ICON"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#86939e",
                          "fontSize": 24,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="RNE__ICON__Component"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "hsl(208, 8%, 63%)",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Prev
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#242424",
            }
          }
        >
          Page 
          1
        </Text>
        <Text
          style={
            Object {
              "color": "#242424",
            }
          }
        >
          Items 
          1
          -
          20
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 2,
            },
            undefined,
            false,
          ]
        }
        testID="RNE_BUTTON_WRAPPER"
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#00DAC4",
                "borderRadius": 2,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "paddingHorizontal": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "hsl(208, 8%, 63%)",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Next
            </Text>
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
              testID="RNE__ICON__CONTAINER"
            >
              <View
                accessibilityRole="button"
                android_ripple={
                  Object {
                    "borderless": false,
                    "color": "rgba(0, 0, 0, 0.3)",
                    "radius": -5,
                  }
                }
                disabled={false}
                replaceTheme={[Function]}
                testID="RNE__ICON__CONTAINER_ACTION"
                updateTheme={[Function]}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                  testID="RNE__ICON"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#86939e",
                          "fontSize": 24,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="RNE__ICON__Component"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RCTScrollView
      ListEmptyComponent={[Function]}
      data={
        Array [
          Object {},
          Object {},
          Object {},
          Object {},
          Object {},
          Object {},
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onRefresh={[MockFunction]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[MockFunction]}
          refreshing={true}
        />
      }
      refreshing={true}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      viewabilityConfigCallbackPairs={Array []}
    >
      <RCTRefreshControl />
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "justifyContent": "center",
                  "paddingBottom": 20,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              <View
                accessibilityLabel="loading..."
                accessibilityRole="none"
                accessible={false}
                onLayout={[Function]}
                replaceTheme={[Function]}
                style={
                  Array [
                    Object {
                      "borderRadius": 2,
                      "overflow": "hidden",
                    },
                    Object {
                      "backgroundColor": "#bdc6cf",
                      "height": 12,
                      "width": "100%",
                    },
                    undefined,
                    Array [
                      Object {
                        "shadowOffset": Object {
                          "height": 4,
                          "width": -2,
                        },
                        "shadowOpacity": 0.5,
                        "shadowRadius": 3,
                      },
                      Object {
                        "aspectRatio": 0.5846153846153846,
                        "borderRadius": 5,
                        "elevation": 20,
                        "height": undefined,
                        "width": "100%",
                      },
                    ],
                  ]
                }
                testID="RNE__Skeleton"
                updateTheme={[Function]}
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "backgroundColor": "rgb(166, 178, 190)",
                      "height": "100%",
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "80%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 20,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "70%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 15,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "center",
                  "paddingBottom": 20,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              <View
                accessibilityLabel="loading..."
                accessibilityRole="none"
                accessible={false}
                onLayout={[Function]}
                replaceTheme={[Function]}
                style={
                  Array [
                    Object {
                      "borderRadius": 2,
                      "overflow": "hidden",
                    },
                    Object {
                      "backgroundColor": "#bdc6cf",
                      "height": 12,
                      "width": "100%",
                    },
                    undefined,
                    Array [
                      Object {
                        "shadowOffset": Object {
                          "height": 4,
                          "width": -2,
                        },
                        "shadowOpacity": 0.5,
                        "shadowRadius": 3,
                      },
                      Object {
                        "aspectRatio": 0.5846153846153846,
                        "borderRadius": 5,
                        "elevation": 20,
                        "height": undefined,
                        "width": "100%",
                      },
                    ],
                  ]
                }
                testID="RNE__Skeleton"
                updateTheme={[Function]}
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "backgroundColor": "rgb(166, 178, 190)",
                      "height": "100%",
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "80%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 20,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "70%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 15,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "justifyContent": "center",
                  "paddingBottom": 20,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              <View
                accessibilityLabel="loading..."
                accessibilityRole="none"
                accessible={false}
                onLayout={[Function]}
                replaceTheme={[Function]}
                style={
                  Array [
                    Object {
                      "borderRadius": 2,
                      "overflow": "hidden",
                    },
                    Object {
                      "backgroundColor": "#bdc6cf",
                      "height": 12,
                      "width": "100%",
                    },
                    undefined,
                    Array [
                      Object {
                        "shadowOffset": Object {
                          "height": 4,
                          "width": -2,
                        },
                        "shadowOpacity": 0.5,
                        "shadowRadius": 3,
                      },
                      Object {
                        "aspectRatio": 0.5846153846153846,
                        "borderRadius": 5,
                        "elevation": 20,
                        "height": undefined,
                        "width": "100%",
                      },
                    ],
                  ]
                }
                testID="RNE__Skeleton"
                updateTheme={[Function]}
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "backgroundColor": "rgb(166, 178, 190)",
                      "height": "100%",
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "80%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 20,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "70%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 15,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "center",
                  "paddingBottom": 20,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              <View
                accessibilityLabel="loading..."
                accessibilityRole="none"
                accessible={false}
                onLayout={[Function]}
                replaceTheme={[Function]}
                style={
                  Array [
                    Object {
                      "borderRadius": 2,
                      "overflow": "hidden",
                    },
                    Object {
                      "backgroundColor": "#bdc6cf",
                      "height": 12,
                      "width": "100%",
                    },
                    undefined,
                    Array [
                      Object {
                        "shadowOffset": Object {
                          "height": 4,
                          "width": -2,
                        },
                        "shadowOpacity": 0.5,
                        "shadowRadius": 3,
                      },
                      Object {
                        "aspectRatio": 0.5846153846153846,
                        "borderRadius": 5,
                        "elevation": 20,
                        "height": undefined,
                        "width": "100%",
                      },
                    ],
                  ]
                }
                testID="RNE__Skeleton"
                updateTheme={[Function]}
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "backgroundColor": "rgb(166, 178, 190)",
                      "height": "100%",
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "80%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 20,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "70%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 15,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "justifyContent": "center",
                  "paddingBottom": 20,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              <View
                accessibilityLabel="loading..."
                accessibilityRole="none"
                accessible={false}
                onLayout={[Function]}
                replaceTheme={[Function]}
                style={
                  Array [
                    Object {
                      "borderRadius": 2,
                      "overflow": "hidden",
                    },
                    Object {
                      "backgroundColor": "#bdc6cf",
                      "height": 12,
                      "width": "100%",
                    },
                    undefined,
                    Array [
                      Object {
                        "shadowOffset": Object {
                          "height": 4,
                          "width": -2,
                        },
                        "shadowOpacity": 0.5,
                        "shadowRadius": 3,
                      },
                      Object {
                        "aspectRatio": 0.5846153846153846,
                        "borderRadius": 5,
                        "elevation": 20,
                        "height": undefined,
                        "width": "100%",
                      },
                    ],
                  ]
                }
                testID="RNE__Skeleton"
                updateTheme={[Function]}
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "backgroundColor": "rgb(166, 178, 190)",
                      "height": "100%",
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "80%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 20,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "70%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 15,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "center",
                  "paddingBottom": 20,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              <View
                accessibilityLabel="loading..."
                accessibilityRole="none"
                accessible={false}
                onLayout={[Function]}
                replaceTheme={[Function]}
                style={
                  Array [
                    Object {
                      "borderRadius": 2,
                      "overflow": "hidden",
                    },
                    Object {
                      "backgroundColor": "#bdc6cf",
                      "height": 12,
                      "width": "100%",
                    },
                    undefined,
                    Array [
                      Object {
                        "shadowOffset": Object {
                          "height": 4,
                          "width": -2,
                        },
                        "shadowOpacity": 0.5,
                        "shadowRadius": 3,
                      },
                      Object {
                        "aspectRatio": 0.5846153846153846,
                        "borderRadius": 5,
                        "elevation": 20,
                        "height": undefined,
                        "width": "100%",
                      },
                    ],
                  ]
                }
                testID="RNE__Skeleton"
                updateTheme={[Function]}
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "backgroundColor": "rgb(166, 178, 190)",
                      "height": "100%",
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "80%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 20,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "marginTop": 5,
                    "width": "70%",
                  }
                }
              >
                <View
                  accessibilityLabel="loading..."
                  accessibilityRole="none"
                  accessible={false}
                  onLayout={[Function]}
                  replaceTheme={[Function]}
                  style={
                    Array [
                      Object {
                        "borderRadius": 2,
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#bdc6cf",
                        "height": 12,
                        "width": "100%",
                      },
                      undefined,
                      Object {
                        "height": 15,
                      },
                    ]
                  }
                  testID="RNE__Skeleton"
                  updateTheme={[Function]}
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "backgroundColor": "rgb(166, 178, 190)",
                        "height": "100%",
                        "opacity": 1,
                        "width": "100%",
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "backgroundColor": "rgba(36, 36, 36, 0.6)",
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <RCTSafeAreaView
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignItems": "flex-end",
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          Object {
            "opacity": 0,
            "transform": Array [
              Object {
                "scale": 0,
              },
            ],
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "marginBottom": 16,
                "marginRight": 24,
              },
              false,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 5,
                  "color": "black",
                  "elevation": 2,
                  "marginHorizontal": 16,
                  "marginVertical": 8,
                  "paddingHorizontal": 12,
                  "paddingVertical": 6,
                },
                undefined,
              ]
            }
          >
            Bookmarks
          </Text>
          <View
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 28,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 2,
                  },
                  Object {
                    "borderRadius": 28,
                    "elevation": 4,
                  },
                  false,
                ]
              }
              testID="RNE_BUTTON_WRAPPER"
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "busy": false,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#03dac4",
                      "borderColor": "#00DAC4",
                      "borderRadius": 2,
                      "borderWidth": 0,
                      "flexDirection": "row",
                      "height": 40,
                      "justifyContent": "center",
                      "padding": 8,
                      "paddingHorizontal": 10,
                      "width": 40,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 40,
                        "marginHorizontal": 5,
                        "overflow": "hidden",
                        "padding": 8,
                        "width": 40,
                      }
                    }
                    testID="RNE__ICON__CONTAINER"
                  >
                    <View
                      accessibilityRole="button"
                      android_ripple={
                        Object {
                          "borderless": false,
                          "color": "rgba(0, 0, 0, 0.3)",
                          "radius": -5,
                        }
                      }
                      disabled={false}
                      testID="RNE__ICON__CONTAINER_ACTION"
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "transparent",
                            "justifyContent": "center",
                          }
                        }
                        testID="RNE__ICON"
                      >
                        <Text
                          allowFontScaling={false}
                          selectable={false}
                          style={
                            Array [
                              Object {
                                "color": "#fff",
                                "fontSize": 24,
                              },
                              Object {
                                "backgroundColor": "transparent",
                              },
                              Object {
                                "fontFamily": "Material Icons",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                              Object {},
                            ]
                          }
                          testID="RNE__ICON__Component"
                        >
                          
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          Object {
            "opacity": 0,
            "transform": Array [
              Object {
                "scale": 0,
              },
            ],
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "marginBottom": 16,
                "marginRight": 24,
              },
              false,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 5,
                  "color": "black",
                  "elevation": 2,
                  "marginHorizontal": 16,
                  "marginVertical": 8,
                  "paddingHorizontal": 12,
                  "paddingVertical": 6,
                },
                undefined,
              ]
            }
          >
            Order by relevance
          </Text>
          <View
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 28,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 2,
                  },
                  Object {
                    "borderRadius": 28,
                    "elevation": 4,
                  },
                  false,
                ]
              }
              testID="RNE_BUTTON_WRAPPER"
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "busy": false,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#2089dc",
                      "borderColor": "#00DAC4",
                      "borderRadius": 2,
                      "borderWidth": 0,
                      "flexDirection": "row",
                      "height": 40,
                      "justifyContent": "center",
                      "padding": 8,
                      "paddingHorizontal": 10,
                      "width": 40,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 40,
                        "marginHorizontal": 5,
                        "overflow": "hidden",
                        "padding": 8,
                        "width": 40,
                      }
                    }
                    testID="RNE__ICON__CONTAINER"
                  >
                    <View
                      accessibilityRole="button"
                      android_ripple={
                        Object {
                          "borderless": false,
                          "color": "rgba(0, 0, 0, 0.3)",
                          "radius": -5,
                        }
                      }
                      disabled={false}
                      testID="RNE__ICON__CONTAINER_ACTION"
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "transparent",
                            "justifyContent": "center",
                          }
                        }
                        testID="RNE__ICON"
                      >
                        <Text
                          allowFontScaling={false}
                          selectable={false}
                          style={
                            Array [
                              Object {
                                "color": "#fff",
                                "fontSize": 24,
                              },
                              Object {
                                "backgroundColor": "transparent",
                              },
                              Object {
                                "fontFamily": "Material Design Icons",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                              Object {},
                            ]
                          }
                          testID="RNE__ICON__Component"
                        >
                          󰒼
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 28,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 16,
            "marginTop": 0,
            "opacity": 1,
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 2,
              },
              Object {
                "borderRadius": 28,
                "elevation": 4,
              },
              false,
            ]
          }
          testID="RNE_BUTTON_WRAPPER"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#2089dc",
                  "borderColor": "#00DAC4",
                  "borderRadius": 2,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "height": 56,
                  "justifyContent": "center",
                  "padding": 16,
                  "paddingHorizontal": 10,
                  "width": 56,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 56,
                    "marginHorizontal": 5,
                    "overflow": "hidden",
                    "padding": 16,
                    "width": 56,
                  }
                }
                testID="RNE__ICON__CONTAINER"
              >
                <View
                  accessibilityRole="button"
                  android_ripple={
                    Object {
                      "borderless": false,
                      "color": "rgba(0, 0, 0, 0.3)",
                      "radius": -5,
                    }
                  }
                  disabled={false}
                  testID="RNE__ICON__CONTAINER_ACTION"
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                    testID="RNE__ICON"
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "#fff",
                            "fontSize": 24,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "anticon",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="RNE__ICON__Component"
                    >
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>
</RNCSafeAreaView>
`;

exports[`home screen should render correctly: home screen 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  style={
    Object {
      "backgroundColor": undefined,
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "borderBottomColor": "transparent",
          "borderBottomWidth": 1,
          "borderTopColor": "transparent",
          "borderTopWidth": 1,
          "padding": 8,
          "paddingHorizontal": 15,
          "paddingVertical": 20,
        }
      }
      testID="RNE__SearchBar-wrapper"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 0,
            "width": "100%",
          }
        }
        testID="RNE__Input__view-wrapper"
      >
        <View
          collapsable={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": undefined,
              "borderBottomWidth": 0,
              "borderColor": "#86939e",
              "borderRadius": 3,
              "flexDirection": "row",
              "minHeight": 30,
              "overflow": "hidden",
              "transform": Array [
                Object {
                  "translateX": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "marginLeft": 8,
                "marginVertical": 4,
                "paddingRight": 4,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
              testID="RNE__ICON__CONTAINER"
            >
              <View
                accessibilityRole="button"
                android_ripple={
                  Object {
                    "borderless": false,
                    "color": "rgba(0, 0, 0, 0.3)",
                    "radius": -5,
                  }
                }
                disabled={false}
                testID="RNE__ICON__CONTAINER_ACTION"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                  testID="RNE__ICON"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#86939e",
                          "fontSize": 18,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="RNE__ICON__Component"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <TextInput
            autoCorrect={false}
            editable={true}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Search books"
            placeholderTextColor="#86939e"
            platform="default"
            style={
              Object {
                "backgroundColor": undefined,
                "color": "#86939e",
                "flex": 1,
                "fontSize": 18,
                "marginLeft": 10,
                "minHeight": 40,
              }
            }
            testID="RNE__SearchBar"
            underlineColorAndroid="transparent"
            value=""
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "marginRight": 8,
                "marginVertical": 4,
                "paddingRight": 4,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            />
          </View>
        </View>
        <Text
          style={
            Object {
              "color": "#ff190c",
              "fontSize": 12,
              "height": 0,
              "margin": 0,
              "padding": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "paddingBottom": 20,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 2,
            },
            undefined,
            false,
          ]
        }
        testID="RNE_BUTTON_WRAPPER"
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#00DAC4",
                "borderRadius": 2,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "paddingHorizontal": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
              testID="RNE__ICON__CONTAINER"
            >
              <View
                accessibilityRole="button"
                android_ripple={
                  Object {
                    "borderless": false,
                    "color": "rgba(0, 0, 0, 0.3)",
                    "radius": -5,
                  }
                }
                disabled={false}
                replaceTheme={[Function]}
                testID="RNE__ICON__CONTAINER_ACTION"
                updateTheme={[Function]}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                  testID="RNE__ICON"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#86939e",
                          "fontSize": 24,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="RNE__ICON__Component"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "hsl(208, 8%, 63%)",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Prev
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#242424",
            }
          }
        >
          Page 
          1
        </Text>
        <Text
          style={
            Object {
              "color": "#242424",
            }
          }
        >
          Items 
          1
          -
          20
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 2,
            },
            undefined,
            false,
          ]
        }
        testID="RNE_BUTTON_WRAPPER"
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#00DAC4",
                "borderRadius": 2,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "paddingHorizontal": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00DAC4",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Next
            </Text>
            <View
              style={
                Object {
                  "overflow": "hidden",
                }
              }
              testID="RNE__ICON__CONTAINER"
            >
              <View
                accessibilityRole="button"
                android_ripple={
                  Object {
                    "borderless": false,
                    "color": "rgba(0, 0, 0, 0.3)",
                    "radius": -5,
                  }
                }
                disabled={false}
                replaceTheme={[Function]}
                testID="RNE__ICON__CONTAINER_ACTION"
                updateTheme={[Function]}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "justifyContent": "center",
                    }
                  }
                  testID="RNE__ICON"
                >
                  <Text
                    allowFontScaling={false}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#2089dc",
                          "fontSize": 24,
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                        Object {
                          "fontFamily": "Material Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                    testID="RNE__ICON__Component"
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RCTScrollView
      ListEmptyComponent={[Function]}
      data={
        Object {
          "id": "I2QvPwAACAAJ",
          "volumeInfo": Object {
            "authors": Array [
              "Clive Staples Lewis",
            ],
            "description": "Este livro apresenta as sete crônicas de Nárnia integralmente, num único volume.",
            "publishedDate": "2009",
            "title": "As crônicas de Nárnia",
          },
        }
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onRefresh={[MockFunction]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[MockFunction]}
          refreshing={false}
        />
      }
      refreshing={false}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      viewabilityConfigCallbackPairs={Array []}
    >
      <RCTRefreshControl />
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 600,
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "overflow": "hidden",
              }
            }
            testID="RNE__ICON__CONTAINER"
          >
            <View
              accessibilityRole="button"
              android_ripple={
                Object {
                  "borderless": false,
                  "color": "rgba(0, 0, 0, 0.3)",
                  "radius": -5,
                }
              }
              disabled={false}
              replaceTheme={[Function]}
              testID="RNE__ICON__CONTAINER_ACTION"
              updateTheme={[Function]}
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "justifyContent": "center",
                  }
                }
                testID="RNE__ICON"
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#242424",
                        "fontSize": 36,
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                      Object {
                        "fontFamily": "anticon",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                  testID="RNE__ICON__Component"
                >
                  
                </Text>
              </View>
            </View>
          </View>
          <Text
            style={
              Object {
                "color": "#242424",
                "fontSize": 18,
                "fontWeight": "500",
                "marginTop": 10,
              }
            }
          >
            There are no books to show.
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "justifyContent": "flex-end",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "backgroundColor": "rgba(36, 36, 36, 0.6)",
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <RCTSafeAreaView
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignItems": "flex-end",
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          Object {
            "opacity": 0,
            "transform": Array [
              Object {
                "scale": 0,
              },
            ],
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "marginBottom": 16,
                "marginRight": 24,
              },
              false,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 5,
                  "color": "black",
                  "elevation": 2,
                  "marginHorizontal": 16,
                  "marginVertical": 8,
                  "paddingHorizontal": 12,
                  "paddingVertical": 6,
                },
                undefined,
              ]
            }
          >
            Bookmarks
          </Text>
          <View
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 28,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 2,
                  },
                  Object {
                    "borderRadius": 28,
                    "elevation": 4,
                  },
                  false,
                ]
              }
              testID="RNE_BUTTON_WRAPPER"
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "busy": false,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#03dac4",
                      "borderColor": "#00DAC4",
                      "borderRadius": 2,
                      "borderWidth": 0,
                      "flexDirection": "row",
                      "height": 40,
                      "justifyContent": "center",
                      "padding": 8,
                      "paddingHorizontal": 10,
                      "width": 40,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 40,
                        "marginHorizontal": 5,
                        "overflow": "hidden",
                        "padding": 8,
                        "width": 40,
                      }
                    }
                    testID="RNE__ICON__CONTAINER"
                  >
                    <View
                      accessibilityRole="button"
                      android_ripple={
                        Object {
                          "borderless": false,
                          "color": "rgba(0, 0, 0, 0.3)",
                          "radius": -5,
                        }
                      }
                      disabled={false}
                      testID="RNE__ICON__CONTAINER_ACTION"
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "transparent",
                            "justifyContent": "center",
                          }
                        }
                        testID="RNE__ICON"
                      >
                        <Text
                          allowFontScaling={false}
                          selectable={false}
                          style={
                            Array [
                              Object {
                                "color": "#fff",
                                "fontSize": 24,
                              },
                              Object {
                                "backgroundColor": "transparent",
                              },
                              Object {
                                "fontFamily": "Material Icons",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                              Object {},
                            ]
                          }
                          testID="RNE__ICON__Component"
                        >
                          
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          Object {
            "opacity": 0,
            "transform": Array [
              Object {
                "scale": 0,
              },
            ],
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "marginBottom": 16,
                "marginRight": 24,
              },
              false,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderRadius": 5,
                  "color": "black",
                  "elevation": 2,
                  "marginHorizontal": 16,
                  "marginVertical": 8,
                  "paddingHorizontal": 12,
                  "paddingVertical": 6,
                },
                undefined,
              ]
            }
          >
            Order by relevance
          </Text>
          <View
            collapsable={false}
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 28,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 2,
                  },
                  Object {
                    "borderRadius": 28,
                    "elevation": 4,
                  },
                  false,
                ]
              }
              testID="RNE_BUTTON_WRAPPER"
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "busy": false,
                    "disabled": false,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#2089dc",
                      "borderColor": "#00DAC4",
                      "borderRadius": 2,
                      "borderWidth": 0,
                      "flexDirection": "row",
                      "height": 40,
                      "justifyContent": "center",
                      "padding": 8,
                      "paddingHorizontal": 10,
                      "width": 40,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 40,
                        "marginHorizontal": 5,
                        "overflow": "hidden",
                        "padding": 8,
                        "width": 40,
                      }
                    }
                    testID="RNE__ICON__CONTAINER"
                  >
                    <View
                      accessibilityRole="button"
                      android_ripple={
                        Object {
                          "borderless": false,
                          "color": "rgba(0, 0, 0, 0.3)",
                          "radius": -5,
                        }
                      }
                      disabled={false}
                      testID="RNE__ICON__CONTAINER_ACTION"
                    >
                      <View
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "transparent",
                            "justifyContent": "center",
                          }
                        }
                        testID="RNE__ICON"
                      >
                        <Text
                          allowFontScaling={false}
                          selectable={false}
                          style={
                            Array [
                              Object {
                                "color": "#fff",
                                "fontSize": 24,
                              },
                              Object {
                                "backgroundColor": "transparent",
                              },
                              Object {
                                "fontFamily": "Material Design Icons",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                              Object {},
                            ]
                          }
                          testID="RNE__ICON__Component"
                        >
                          󰒼
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 28,
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 16,
            "marginTop": 0,
            "opacity": 1,
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 2,
              },
              Object {
                "borderRadius": 28,
                "elevation": 4,
              },
              false,
            ]
          }
          testID="RNE_BUTTON_WRAPPER"
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#2089dc",
                  "borderColor": "#00DAC4",
                  "borderRadius": 2,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "height": 56,
                  "justifyContent": "center",
                  "padding": 16,
                  "paddingHorizontal": 10,
                  "width": 56,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 56,
                    "marginHorizontal": 5,
                    "overflow": "hidden",
                    "padding": 16,
                    "width": 56,
                  }
                }
                testID="RNE__ICON__CONTAINER"
              >
                <View
                  accessibilityRole="button"
                  android_ripple={
                    Object {
                      "borderless": false,
                      "color": "rgba(0, 0, 0, 0.3)",
                      "radius": -5,
                    }
                  }
                  disabled={false}
                  testID="RNE__ICON__CONTAINER_ACTION"
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                    testID="RNE__ICON"
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "#fff",
                            "fontSize": 24,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "anticon",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="RNE__ICON__Component"
                    >
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>
</RNCSafeAreaView>
`;
